fix horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,23 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
+  /* height: 100vh; */
+  /* overflow: hidden; */
 }
+/* 
+* {
+  padding: 0;
+  margin: 0;
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+iframe {
+  width: 960px;
+  height: 90%;
+  overflow: hidden;
+  border: none;
 }
